- Rename `AlternativeSprites.get_zoom` to `get_sprite` and add bpp argument.
- Rename some of the Action0 properties for `CARGO` to match nml.
- Don't write redundant actions for railtypes without fallbacks in railtype table.
- Return cargo type ids in `NewGRF.set_cargo_table`.
- Remove all uses of spectra in favour of own colour submodule using OKLAB colour space.

- lib: Fix `CallbackManager.make_switches` for non-vehicle features.
- lib: Fix incorrect 2cc colors for auto-articulated parts.
- lib: Fix unicode vehicle names.
- lib: Don't change callbacks passed to `CallbackMananger`.
- lib: Set correct flags and track_type on auto-articulated parts.
- lib: Add high-level `Industry` class.
- lib: `CallbackManager` rewrite:
	- Support all features (non-vehicles may still be incomplete).
	- Make `CallbackManager` abstract class, use `make_callback_manager` function instead.
	- Support splitting callbacks for default and purchase branch with `DualCallback`.
	- Use `graphics.purchase` instead of `purchase_graphics` attribute.
- lib: Add `Ship.Flags` and `RoadVehicle.Flags` for unified access to flags.
- lib: Add `EngineOverride` sprite generator.
- lib: Allow omitting `ids` in `DisableDefault` to disable all items.
- lib: Support `HOUSE`, `INDUSTRY` and `CARGO` features in `DisableDefault`.

- grftopy: Fix missing sprite zoom
- grftopy: Improve decoding of industry layouts.
- grftopy: Fix decompilation of ActionB.
- grftopy: Fix decompilation of action 7/9 with value > 4 bytes.
- grftopy: Add -p/--palette cli option to set output palette for 8bpp images.
---------
0.2.2
---------

- Change license to GPL v2+ (same as nml) instead of v3 to allow reusing v2 code/resources.
- Fix graphics sprite composition.
- Fix Train weight Action 0 properties (low and high bytes).
- Fix compilation of generic var parameter in Action 2.
- Fix `var(...)` call in `Switch` code not accepting `param` value without parentheses.
- Fix default purchase sprite for auto-articulated trains.
